# AI-Radar

./: .gitignore  CLAUDE.md  MYNOTES.md  README.md  data  main.py  pyproject.toml  requirements.txt
.github/workflows/: update-data.yml
contracts/: schema.py
dashboard/: CLAUDE.md  app.py
ingestion/: CLAUDE.md  github_client.py  runner.py
transform/: CLAUDE.md  __init__.py  clean.py  metrics.py
